# obs-dynamic-autocrop

./: CMakeLists.txt  README.md  build.bat  build.ps1
data/locale/: en-US.ini
src/: dynamic_autocrop_filter.c
